<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hw1</string>
    <string name="action_settings">Settings</string>
    <string name="text_view">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>
    <string name="autumn_leaf">Icon of MainPage</string>
    <string name="MPButton1">Button 1</string>
    <string name="MPButton2">Button 2</string>
    <string name="MPDialogButton">Dialog</string>
    <string name="MPHomeButton">Open Page 1</string>
    <string name="MPGearButton">Open Page 2</string>
    <string name="MPMailButton">Open Page 3</string>
    <string name="EdText">enter text</string>
    <string name="DialogOK">OK</string>
    <string name="DialogCancel">Cancel</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="item"> Заголовок </string>
    <string name="robot_view"> Robot </string>
    <string name="github_view"> Github </string>
    <string name="vert_11"> 1/4 \n #990000 </string>
    <string name="vert_12"> 1/4 \n #9966CC </string>
    <string name="vert_13"> 1/2 \n #9999FF </string>
    <string name="vert_21"> 1/3 \n #99CC99 </string>
    <string name="vert_22"> 1/3 \n #339999 </string>
    <string name="vert_23"> 1/3 \n #336633 </string>
    <string name="vert_31"> 1/2 \n #FFCC99 </string>
    <string name="vert_32"> 1/2 \n #FF9933 </string>
    <string name="hor_11"> 3/4 \n #990000 </string>
    <string name="hor_12"> 1/4 \n #9966CC </string>
    <string name="hor_21"> 2/5 \n #339999 </string>
    <string name="hor_22"> 1/5 \n #9999FF </string>
    <string name="hor_23"> 2/5 \n #99CC99 </string>
    <string name="hor_31"> 1/7 \n #336633 </string>
    <string name="hor_32"> 4/7 \n #FF9933 </string>
    <string name="hor_33"> 2/7 \n #FFCC99 </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_forth">ForthActivity</string>
    <string name="FPtext_view">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="CbText"> Больше не показывать это окно </string>
</resources>
