<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TPMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/TPMainLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vert_11"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="#990000" />"
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vert_12"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="#9966cc" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/vert_13"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="#9999ff"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/TPMainLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/vert_21"
            android:gravity="center_vertical|center_horizontal"
            android:background="#99cc99"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vert_22"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="#339999"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vert_23"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="#336633"/>
    </LinearLayout>    
    <LinearLayout 
        android:id="@+id/TPMainLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">"
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vert_31"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="#ffcc99"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vert_32"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="#ff9933"/>
    </LinearLayout>
</LinearLayout>
