<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MPLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
     
    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:layout_marginBottom="40dp">
        
    	<ImageView
    	    android:id="@+id/MainPageImageView"
    	    android:contentDescription="@string/autumn_leaf"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:src="@drawable/autumn_leaf"/>

    	<LinearLayout
    	    android:id="@+id/MPLayoutButtons"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:layout_toRightOf="@id/MainPageImageView"
    	    android:layout_alignTop="@id/MainPageImageView"
    	    android:layout_alignBottom="@id/MainPageImageView"
    	    android:paddingLeft="10dp">
    	  	     		
    		<Button
    	    	android:id="@+id/MPButton1"
    	    	android:layout_width="match_parent"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="1"
    	    	android:layout_marginBottom="10dp"
    	    	android:text="@string/MPButton1"
    	    	android:gravity="center_vertical|center_horizontal"
    	    	android:background="@drawable/roundedbutton"/>
     		<Button
    	    	android:id="@+id/MPButton2"
    	    	android:layout_width="match_parent"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="1"
    	    	android:layout_marginTop="10dp"
    	    	android:text="@string/MPButton2"
    	    	android:gravity="center_vertical|center_horizontal"
    	    	android:background="@drawable/roundedbutton"/>
     		    
    	</LinearLayout>    	    
         
    <TextView
        android:id="@+id/MPTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view"
        android:layout_below="@id/MainPageImageView"
        android:textSize="12sp" />
    <Button
    	android:id="@+id/MPDialogButton"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/MPTextView"
    	android:layout_marginBottom="5dp"
    	android:text="@string/MPDialogButton"
    	android:textSize="14sp"
    	android:gravity="center_vertical|center_horizontal"
    	android:background="@drawable/roundedbutton"
    	android:onClick="openDialog"/>
    <EditText
    	android:id="@+id/MPeditText"
    	android:layout_width="match_parent"
    	android:layout_height="fill_parent"
    	android:layout_below="@id/MPDialogButton"
    	android:hint="@string/EdText"
    	android:textSize="12sp" />   
	</RelativeLayout>
    
    <LinearLayout
    	android:id="@+id/MPBottomButtons"
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:orientation="horizontal"
     	android:layout_alignParentBottom="true"
     	android:baselineAligned="false">
     	
        <ImageButton
            android:id="@+id/MPHomeButton"
            android:contentDescription="@string/MPHomeButton"
            android:src="@drawable/bank_basic_green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:background="@drawable/navbutton"
            android:onClick="StartSecondActivity"/>	
        
        <ImageButton 
            android:id="@+id/MPGearButton"
            android:contentDescription="@string/MPGearButton"
            android:src="@drawable/gear_basic_green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:background="@drawable/navbutton"/>
        
        <ImageButton
            android:id="@+id/MPMailButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/navbutton"
            android:contentDescription="@string/MPMailButton"
            android:src="@drawable/mail_basic_green" />

    </LinearLayout>
</RelativeLayout>
