<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity" >
	<LinearLayout
	 	android:id="@+id/SPTopBar"
	 	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:orientation="horizontal"
     	android:background="#cccccc">
	    <ImageView
        	android:id="@+id/SPRobotView"
        	android:contentDescription="@string/robot_view"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:alpha=".50"
        	android:src="@drawable/robot_64"/>
		<TextView
        	android:id="@+id/SPTextViewTopBar"
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:text="@string/item"
        	android:gravity="center_vertical|center_horizontal"
        	android:textSize="12sp" />
	    
    	<ImageView
        	android:id="@+id/SPGithubView"
        	android:contentDescription="@string/github_view"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:alpha=".50"
        	android:src="@drawable/github_64"/>
	</LinearLayout>
          
    <LinearLayout
        android:id="@+id/SPMainLayout"
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"
     	android:orientation="horizontal"
     	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:layout_below="@id/SPTopBar"
     	android:layout_alignParentBottom="true"
     	android:baselineAligned="false">
        <TextView
        	android:id="@+id/SPTextView1"
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:text=""
        	android:gravity="center_vertical|center_horizontal"
        	android:textSize="12sp" />
        <TextView
        	android:id="@+id/SPTextView2"
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:text=""
        	android:gravity="center_vertical|center_horizontal"
        	android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
